[gd_scene load_steps=11 format=3 uid="uid://uby6wv405ia6"]

[ext_resource type="Script" uid="uid://cgiy3uu4qb8w8" path="res://src/playbook/PlaybookEditor.gd" id="1_ybrfa"]
[ext_resource type="Texture2D" uid="uid://dl8pi2jccrcsr" path="res://assets/sprites/tocho_tactics_background.png" id="2_4aaqw"]
[ext_resource type="Script" uid="uid://v5bcnk3p7uvc" path="res://src/playbook/components/RouteManager.gd" id="3_sigk0"]
[ext_resource type="Script" uid="uid://b8arbw6hrqmw7" path="res://src/playbook/PlaybookUI.gd" id="4_mdejl"]
[ext_resource type="PackedScene" uid="uid://bf1khj84lp83c" path="res://src/playbook/player/player_context_menu.tscn" id="5_unia6"]
[ext_resource type="Texture2D" uid="uid://p2h53a8mxwno" path="res://assets/sprites/Icons/play_draft_icon.png" id="5_uu6s6"]
[ext_resource type="Script" uid="uid://bc54gkxxvck7j" path="res://src/playbook/player/PlayerContextMenu.gd" id="6_mkvnw"]
[ext_resource type="Texture2D" uid="uid://ccghq7pe7a8n8" path="res://assets/players_icons/face_01.png" id="8_vyx8u"]
[ext_resource type="PackedScene" uid="uid://c3aue4rcdfyn1" path="res://src/shared/stats_radar.tscn" id="9_jwnju"]

[sub_resource type="LabelSettings" id="LabelSettings_sigk0"]
font_size = 46
shadow_size = 10

[node name="PlaybookEditor" type="Node2D"]
script = ExtResource("1_ybrfa")
metadata/_edit_lock_ = true

[node name="Background2" type="TextureRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 391.00003
offset_top = -734.0
offset_right = 1000.0
offset_bottom = 868.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.71998096, 0.86441994)
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("2_4aaqw")
stretch_mode = 3
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="TextureRect" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -454.0
offset_top = -669.0
offset_right = -454.0
offset_bottom = -669.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.6729074, 1.9270275)
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 2
texture = ExtResource("2_4aaqw")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="NodesContainer" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="RouteLine" type="Line2D" parent="."]
texture_repeat = 2
width = 4.0
default_color = Color(0.274124, 0.8291763, 0, 1)
joint_mode = 2
begin_cap_mode = 2
metadata/_edit_lock_ = true

[node name="PreviewLine" type="Line2D" parent="."]
z_index = 100
width = 4.0
default_color = Color(0.81747544, 1, 0.7742028, 0.5019608)
joint_mode = 2
begin_cap_mode = 2
metadata/_edit_lock_ = true

[node name="RouteManager" type="Node2D" parent="." node_paths=PackedStringArray("route_line", "preview_line")]
script = ExtResource("3_sigk0")
route_line = NodePath("../RouteLine")
preview_line = NodePath("../PreviewLine")
metadata/_edit_lock_ = true

[node name="UI_Layer" type="CanvasLayer" parent="." node_paths=PackedStringArray("editor")]
layer = 10
script = ExtResource("4_mdejl")
editor = NodePath("..")
draft_icon_texture = ExtResource("5_uu6s6")

[node name="MainLayout" type="MarginContainer" parent="UI_Layer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.0020921, 1.0079132)
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="UI_Layer/MainLayout"]
layout_mode = 2
mouse_filter = 2

[node name="LeftPanel" type="VBoxContainer" parent="UI_Layer/MainLayout/HBoxContainer"]
custom_minimum_size = Vector2(370.645, 0)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2

[node name="Label" type="Label" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Jugadas"
label_settings = SubResource("LabelSettings_sigk0")
horizontal_alignment = 1

[node name="PlaysGrid" type="GridContainer" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 7
theme_override_constants/v_separation = 7
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="BtnPrev" type="Button" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 20)
layout_mode = 2
text = "<"

[node name="PlayDisplay" type="VBoxContainer" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PreviewRect" type="TextureRect" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/HBoxContainer/PlayDisplay"]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 220)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="PlayNameLabel" type="Label" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/HBoxContainer/PlayDisplay/PreviewRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 34.7286
offset_top = 223.03864
offset_right = 196.7286
offset_bottom = 246.03864
text = "Nombre de la Jugada"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnNext" type="Button" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = ">"

[node name="StatsPanel" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel" instance=ExtResource("5_unia6")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
script = ExtResource("6_mkvnw")

[node name="Background" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/StatsPanel" index="0"]
offset_left = -20.0
offset_top = 77.914505
offset_right = 20.0
offset_bottom = 117.91451
scale = Vector2(9.806836, 7.1696067)

[node name="LeftColumn" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/StatsPanel/Background" index="0"]
visible = false
offset_left = 25.337442
offset_right = 148.66888

[node name="Header" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/StatsPanel/Background" index="1"]
offset_left = 10.073921
offset_top = 1.1070557
offset_right = 92.07392
offset_bottom = 24.107056

[node name="Portrait" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/StatsPanel/Background" index="2"]
offset_left = 14.856492
offset_top = 4.428242
offset_right = 56.85649
offset_bottom = 42.42824
scale = Vector2(0.25606638, 0.3548747)
texture = ExtResource("8_vyx8u")

[node name="RoleLabel" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/StatsPanel/Background" index="3"]
offset_left = 1.9333789
offset_top = 18.958414
offset_right = 155.93338
offset_bottom = 41.958412

[node name="PosButton" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/StatsPanel/Background" index="4"]
offset_left = 4.1720285
offset_top = 24.632103
offset_right = 804.17206
offset_bottom = 824.6321
scale = Vector2(0.015129599, 0.015129599)

[node name="StatsGrid" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/StatsPanel/Background" index="5"]
visible = false
offset_top = 5.3969245
offset_bottom = 167.44794

[node name="background_position_icon" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/StatsPanel/Background" index="6"]
offset_left = 1.1193247
offset_top = 22.556366
offset_right = 801.1193
offset_bottom = 822.5564
scale = Vector2(0.021069594, 0.01843078)

[node name="velocity_icon" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/StatsPanel/Background" index="7"]
offset_left = 27.474304
offset_top = 14.3914795
offset_right = 131.4743
offset_bottom = 69.391495
scale = Vector2(0.029366458, 0.046840698)

[node name="stamina_icon" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/StatsPanel/Background" index="8"]
offset_left = 35.411377
offset_top = 31.55127
offset_right = 139.41138
offset_bottom = 109.55127
scale = Vector2(0.02193204, 0.0349825)

[node name="hands_icon" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/StatsPanel/Background" index="9"]
offset_left = 35.106094
offset_top = 17.021065
offset_right = 139.1061
offset_bottom = 105.021065
scale = Vector2(0.025537442, 0.040733263)

[node name="arm_icon" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/StatsPanel/Background" index="10"]
offset_left = 28.491943
offset_top = 36.11792
offset_right = 132.49194
offset_bottom = 124.11792
scale = Vector2(0.020235235, 0.032276027)

[node name="sense_icon" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/StatsPanel/Background" index="11"]
offset_left = 20.55487
offset_top = 18.405518
offset_right = 124.55487
offset_bottom = 106.40552
scale = Vector2(0.01982957, 0.031628974)

[node name="agility_icon" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/StatsPanel/Background" index="12"]
offset_left = 20.55487
offset_top = 31.41333
offset_right = 124.55487
offset_bottom = 119.41333
scale = Vector2(0.021895377, 0.03492402)

[node name="StatsRadar" parent="UI_Layer/MainLayout/HBoxContainer/LeftPanel/StatsPanel/Background" index="13" instance=ExtResource("9_jwnju")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 22.793518
offset_top = 17.436157
offset_right = 172.12326
offset_bottom = 228.32556
scale = Vector2(0.08578757, 0.08569947)
radius = 80.0

[node name="Spacer" type="Control" parent="UI_Layer/MainLayout/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="RightPanel" type="VBoxContainer" parent="UI_Layer/MainLayout/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2

[node name="BtnNew" type="Button" parent="UI_Layer/MainLayout/HBoxContainer/RightPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
text = "+ Nueva Jugada"

[node name="BtnSave" type="Button" parent="UI_Layer/MainLayout/HBoxContainer/RightPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
text = "Guardar Jugada"

[node name="BtnReset" type="Button" parent="UI_Layer/MainLayout/HBoxContainer/RightPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
text = "Restablecer Posiciones
"

[node name="BtnDelete" type="Button" parent="UI_Layer/MainLayout/HBoxContainer/RightPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
text = "Borrar Jugada"

[node name="BtnPlay" type="Button" parent="UI_Layer/MainLayout/HBoxContainer/RightPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
text = "Probar Jugada"

[node name="BtnSetQB" type="Button" parent="UI_Layer/MainLayout/HBoxContainer/RightPanel"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
text = "Designar a QuarterBack"

[node name="BtnSetCenter" type="Button" parent="UI_Layer/MainLayout/HBoxContainer/RightPanel"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
text = "Desingar a Centro
"

[node name="BtnPrecision" type="Button" parent="UI_Layer/MainLayout/HBoxContainer/RightPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
toggle_mode = true
text = "Modo Preciso
"

[node name="SavePlayPopup" type="ConfirmationDialog" parent="UI_Layer"]
unique_name_in_owner = true
title = "Guardar Jugada"
initial_position = 2
content_scale_size = Vector2i(75, 95)
ok_button_text = "Guardar "
cancel_button_text = "Cancelar"

[node name="PlayNameInput" type="LineEdit" parent="UI_Layer/SavePlayPopup"]
unique_name_in_owner = true
offset_right = 68.5625
offset_bottom = 31.0

[node name="DeleteConfirmPopup" type="ConfirmationDialog" parent="UI_Layer"]
unique_name_in_owner = true
title = "Confirmar Eliminacion"
ok_button_text = "Borrar"
dialog_text = "Estas seguro de que quieres borrar esta jugada? Esta accion no se puede deshacer.
"
cancel_button_text = "Cancelar"

[node name="StatusLabel" type="Label" parent="UI_Layer"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -6.4000244
offset_top = 21.64
offset_right = 33.599976
offset_bottom = 44.64002
grow_horizontal = 2
size_flags_horizontal = 4

[node name="AutosaveTimer" type="Timer" parent="UI_Layer"]
unique_name_in_owner = true
wait_time = 0.8
one_shot = true

[node name="CaptureFrame" type="ReferenceRect" parent="."]
offset_left = 408.0
offset_top = 4.0
offset_right = 447.20374
offset_bottom = 46.860577
scale = Vector2(10.789793, 16.779829)
mouse_filter = 2

[editable path="UI_Layer/MainLayout/HBoxContainer/LeftPanel/StatsPanel"]
